# cpp-playground

./: .clang-tidy  .gitmodules  CMakeLists.txt  Dockerfile  TODO.md  build.bat  build.sh  build_app  main.cpp
.github/workflows/: ci.yml
src/: A.h  CommandManager.cpp  CommandManager.h  FavoriteCommandRegistry.cpp  algorithms.h  unique_ptr_constexpr.h
src/coordinates-math-helper/: CurveAppoximationHelper.h  Points.h
src/coordinates-math-helpers/: CollisionHelper.cpp  CollisionHelper.h  GeometryHelper.cpp  GeometryHelper.h  MathHepler.h  PointHelper.h  Rect.h
src/geometryHelper/include/: CollisionHelper.h  CurveApproximationHelper.h  CurveApproximationHelper.hpp  GeometryHelper.h  MathHelper.h  PointHelper.h  Points.h  Rect.h
src/geometryHelper/src/: CollisionHelper.cpp  CurveApproximationHelper.cpp  GeometryHelper.cpp
src/misc/: FavoriteCommandRegistry.h  algorithms.h
test/: geometryHelperTests.cpp
test/geometryHelper/benchmarks/: main.cpp
test/geometryHelper/unit-tests/: CollisionHelperTests.h  CurveApproximationHelperTests.h  GeometryHelperTests.h  MathHelperTests.h  main.cpp
tests/: geometryHelperTests.cpp
